light theme was incorrectly detected this caused visibility issues

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,9 +1,5 @@
 @mixin mint-card-bg {
   background: var(--primary-very-low);
-
-  @media (prefers-color-scheme: light) {
-    background: var(--header_background);
-  }
 }
 
 :root {
